--- a/src/content/docs/book/appendix/0-installation/2-2-pi-computer.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-2-pi-computer.mdx
@@ -518,7 +518,7 @@ And here is the setup using the **20 cm USB-C to USB-A cable**:
 
 :::
 
-## 5. Finalising the Mutli-tool Setup
+## 5. Finalising the Multi-tool Setup
 
 Almost done, just a few final touches!
 
