--- a/src/content/docs/book/part-0-getting-started/00-0-introduction.mdx
+++ b/src/content/docs/book/part-0-getting-started/00-0-introduction.mdx
@@ -44,7 +44,7 @@ While you could use any computer, the field guide targets the [Raspberry Pi](htt
 
 :::tip[Multi-Tool]
 
-The **Programmer's Multi-Tool** is a Raspberry Pi based project, with everything you need to build your own small computer. If you have access to a Makerspace, you can purchase the parts and put this together in no time.
+The **Programmer's Multi-Tool** is a Raspberry Pi based project, with everything you need to build your own small computer. If you have access to a Makespace, you can purchase the parts and put this together in no time.
 
 :::
 
