--- a/src/content/docs/book/part-0-getting-started/1-digital-realities/2-trailside/1-programs.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-digital-realities/2-trailside/1-programs.mdx
@@ -5,7 +5,7 @@ sidebar:
 ---
 import { YouTube } from 'astro-embed';
 
-Computers are everywhere, helping enhance many aspects of our lives. There are computers embedded within many everyday items, most people carry around a computer in their pocket and possibly another on their wrist, and we interact with many differents pieces of software every day.
+Computers are everywhere, helping enhance many aspects of our lives. There are computers embedded within many everyday items, most people carry around a computer in their pocket and possibly another on their wrist, and we interact with many different pieces of software every day.
 
 *Why are computers everywhere?*
 
