--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/09-multimedia-methods.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/09-multimedia-methods.mdx
@@ -43,7 +43,7 @@ public static void ProcessEvents();
 public static bool QuitRequested();
 
 // Key input
-// This also requiers... to get access to the KeyCode details.
+// This also requires... to get access to the KeyCode details.
 // using SplashKitSDK;
 public static bool KeyDown(KeyCode key);
 
