--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-2-events.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-2-events.mdx
@@ -161,4 +161,4 @@ See how if statements allow you to control the sequence of actions. When the com
 
 Have a go at getting the player to move vertically as well.
 
-Using these same mechanics you can create a whole wealth of different functionalities. In each case you can use an if statement to check if an event has occurred, and then you update values within the program in reponse.
+Using these same mechanics you can create a whole wealth of different functionalities. In each case you can use an if statement to check if an event has occurred, and then you update values within the program in response.
