--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-3-menu.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-3-menu.mdx
@@ -28,7 +28,7 @@ choice = ToInt32(line);
 
 At this point we have shown a menu to the user, and read in their choice. Now we need to add branches for the different paths we will need for these options. We could use a number of if statements, but for this we could use a `switch` statement to provide the necessary branches.
 
-Have a go at adding in a `switch` stateemnt for the above code. For now, just output the name of the branch taken. So, for example, output "Addition" if the user chooses 1.
+Have a go at adding in a `switch` statement for the above code. For now, just output the name of the branch taken. So, for example, output "Addition" if the user chooses 1.
 
 <Accordion>
   <AccordionItem header="Code for menu">
