--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/2-02-give-change.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/2-02-give-change.mdx
@@ -65,7 +65,7 @@ Notice that each coin we give has the same steps. The only difference is the **v
 
 ```txt
 Calculate the number of coins to give using the coinValue.
-Update the amount of change remaing
+Update the amount of change remaining
 Output the number of coins with the coin text
 ```
 
@@ -229,7 +229,7 @@ Let's put this in our code and calculate how many $2 coins to give.
     for each kind of coin
         ...
         Calculate the number of coins to give using the coinValue.
-        Update the amount of change remaing
+        Update the amount of change remaining
         Output the number of coins with the coinText
     ```
 
@@ -326,7 +326,7 @@ Let's put this in our code and calculate how many $2 coins to give.
             when 5, coinValue is 5, and coinText is "5c"
 
         Calculate the number of coins to give using the coinValue.
-        Update the amount of change remaing
+        Update the amount of change remaining
         Output the number of coins with the coinText
     ```
 
