--- a/src/content/docs/book/part-2-organised-code/10-project/1-tour/03-iteration-1.mdx
+++ b/src/content/docs/book/part-2-organised-code/10-project/1-tour/03-iteration-1.mdx
@@ -147,7 +147,7 @@ TEST_CASE("Cheese - Create new cheese with default values")
     CHECK(cheese.price_per_kg == 0);
 }
 
-// Other cases to check passing in 1 or 2 argiments
+// Other cases to check passing in 1 or 2 arguments
 
 TEST_CASE("Cheese - Provide name, weight, and price values for new cheese")
 {
