--- a/src/content/docs/book/part-2-organised-code/10-project/1-tour/04-iteration-2.mdx
+++ b/src/content/docs/book/part-2-organised-code/10-project/1-tour/04-iteration-2.mdx
@@ -405,11 +405,11 @@ void print_cheese_list(const vector<cheese_data> &cheeses, bool with_ids)
 }
 
 /**
- * Ask the user to select a cheese from the supplied list. Thsi returns the
+ * Ask the user to select a cheese from the supplied list. This returns the
  * index of the chosen cheese, or -1 if none are selected.
  * 
  * @param cheeses the cheese to output
- * @return int the index of the choseen cheese or -1 if none
+ * @return int the index of the chosen cheese or -1 if none
  */
 int select_cheese(vector<cheese_data> &cheeses)
 {
