--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/01-01-understanding-guess-that-number.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/01-01-understanding-guess-that-number.mdx
@@ -26,7 +26,7 @@ The number is less than 60
 Guess 5: 57
 The number is less than 57
 Guess 6: 54
-The numbar is larger than 54
+The number is larger than 54
 Guess 7: 56
 The number is less than 56
 You ran out of guesses... the number was 55
