--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/01-04-design-play-game.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/01-04-design-play-game.mdx
@@ -78,7 +78,7 @@ There is also a *selection* after the loop to output the answer if the user ran 
 ![Logic for the Play Game method](./images/guess-that-number-play-game-logic.png)
 <div class="caption">Logic for the Play Game method</div><br/>
 
-We can also express this in pesudecode as:
+We can also express this in pseudocode as:
 
 ```text
 Procedure: Play Game
