--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/02-02-task-division.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/02-02-task-division.mdx
@@ -37,7 +37,7 @@ Steps:
             when 5, coinValue is 5, and coinText is "5c"
 
         Calculate the number of coins to give using the coinValue.
-        Update the amount of change remaing
+        Update the amount of change remaining
         Output the number of coins with the coinText
 ```
 
