--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/04-function-decl.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/04-function-decl.mdx
@@ -28,7 +28,7 @@ You can think of procedures as tasks that perform an action, whereas functions a
 ## In C/C++
 
 :::tip[Syntax]
-The following diagram shows the syntax for a function delcaration in C/C++.
+The following diagram shows the syntax for a function declaration in C/C++.
 
 ![Syntax for a C/C++ function declaration](./images/function-decl.png)
 :::
