--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/05-return.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/05-return.mdx
@@ -86,7 +86,7 @@ export const sliderReturn = [
   },
   {
     src: sliderReturn08.src,
-    altText: "In bash shell on linux, the built-in environment variable '$?' contains the status of the last commmand that was run. We can view this by running an 'echo' statement on the command line which will print the status to the terminal. You can see that the test-return program returned 0 to the shell",
+    altText: "In bash shell on linux, the built-in environment variable '$?' contains the status of the last command that was run. We can view this by running an 'echo' statement on the command line which will print the status to the terminal. You can see that the test-return program returned 0 to the shell",
     tipStart: 8,
     tips: [
       "In bash shell on linux, the built-in environment variable '<code>$?</code>' contains the status of the last command that was run.",
