--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-exceptions.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-exceptions.mdx
@@ -114,7 +114,7 @@ export const ExceptionSwiper = [
     {
         src: Slide10.src,
         altText:
-            "Exception is caugh",
+            "Exception is caught",
         tipHeader: "Exception Path - catch takes over",
         tips: [
             "Space for <code>e</code> is allocated on the stack",
@@ -174,7 +174,7 @@ The following images will step you through execution of the throw and catch mech
 
 :::note[Summary]
 
-Exceptions are a structured mechanism that provide an alternate exit path from a function or procedure, one that is faciliated by the exception handling code provided by the language. The exception handler will search back through the stack for the first matching `catch` block, and it will return execution to that point. Where no matching catch blocks are found, the exception will terminate the program.
+Exceptions are a structured mechanism that provide an alternate exit path from a function or procedure, one that is facilitated by the exception handling code provided by the language. The exception handler will search back through the stack for the first matching `catch` block, and it will return execution to that point. Where no matching catch blocks are found, the exception will terminate the program.
 
 Avoid using exceptions where you can, but these will come in handy when you start to build reusable utilities.
 
