--- a/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-recursion-fibonacci.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/2-trailside/10-recursion-fibonacci.mdx
@@ -18,7 +18,7 @@ Notice that the definition of the Fibonacci sequence is recursive.
 
 |   |   |
 |---|---|
-| **Function** | *Fibonaaci* |
+| **Function** | *Fibonacci* |
 | **Parameters** | `n`: The position in the sequence to get the value for. |
 | **Returns** | `int`: The value of the nth number in the Fibonacci sequence. |
 | **Description** | Calculates and returns a value from the Fibonacci sequence. |
