--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/1-tour/0-2-explore-struct.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/1-tour/0-2-explore-struct.mdx
@@ -77,7 +77,7 @@ Now we can build a `read_unit_result` function. This function will contain the c
 |   |   |
 |---|---|
 | **Function** | *Read Result* |
-| **Description** | Prompts the user for input for the unit code (string), unit name (string), and score (double). Use these values to initalise and return `unit_result` struct. |
+| **Description** | Prompts the user for input for the unit code (string), unit name (string), and score (double). Use these values to initialise and return `unit_result` struct. |
 | **Return** | A `unit_result` struct with initialised fields for unit name, unit code and score. |
 
 Have a go at creating this function, and call it from within `main`. Store the data returned from `read_user_result` in a local variable so that we can use it later.
