--- a/src/content/docs/book/part-2-organised-code/3-structuring-data/1-tour/0-3-explore-struct.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-structuring-data/1-tour/0-3-explore-struct.mdx
@@ -96,7 +96,7 @@ int main()
 {
   open_window("Reaction Timer", 800, 600);
 
-  target_data target; // initilise target here
+  target_data target; // initialise target here
   
   while (!quit_requested())
   {
