--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-tour/1-using-malloc.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/1-tour/1-using-malloc.mdx
@@ -74,7 +74,7 @@ int main()
 
     //todo: print the data
 
-    //tood: free the memory
+    //todo: free the memory
 
   return 0;
 }
@@ -127,7 +127,7 @@ int main()
 
     //todo: print the data
 
-    //tood: free the memory
+    //todo: free the memory
 
   return 0;
 }
@@ -186,7 +186,7 @@ int main()
         write_line("Value at index " + to_string(i) + ": " + to_string(data_ptr[i]));
     }
 
-    //tood: free the memory
+    //todo: free the memory
 
   return 0;
 }
