--- a/src/content/docs/book/part-3-programs-as-concepts/3-collections/2-trailside/19-multiple-user-chat.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/3-collections/2-trailside/19-multiple-user-chat.mdx
@@ -147,7 +147,7 @@ private static void SendTargetMessage(ChatPeer peer)
 
 The following screenshot shows the program being run 3 times. Andrew is running the program in the left, Wilma on the top right, and Jake bottom right. Andrew has connected to both Jake and Wilma, and can then send each of them a targeted message. Notice how the message only appears in their respective programs when they check for messages.
 
-![UML Class Diagram showing the ChatPeer runnning.](./images/multi-user-chat-run.png)
+![UML Class Diagram showing the ChatPeer running.](./images/multi-user-chat-run.png)
 
 ## Your Task
 
