--- a/src/content/docs/book/part-3-programs-as-concepts/3-collections/2-trailside/21-analysing-code-with-collections.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/3-collections/2-trailside/21-analysing-code-with-collections.mdx
@@ -1,5 +1,5 @@
 ---
-title: Analyzing Code with Collections
+title: Analysing Code with Collections
 ---
 
 See us use the desk checking process to work through some program code that makes use of an array. 
