--- a/src/content/docs/book/part-3-programs-as-concepts/4-collaboration/2-trailside/28-uml-class-diagrams.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/4-collaboration/2-trailside/28-uml-class-diagrams.mdx
@@ -1,10 +1,10 @@
 ---
-title: Unified Modeling Language
+title: Unified Modelling Language
 ---
 
 Get started with UML class and sequence diagrams to help communicate the structure of your design.
 
-The Unified Modeling Language (UML) provides a means of communicating the structure and dynamic behaviour of a software solution. The [class diagram](https://msdn.microsoft.com/en-us/library/dd409437.aspx) and [sequence diagram](https://msdn.microsoft.com/en-us/library/dd409377.aspx) are the two main ways of communicating aspects of object oriented solutions.
+The Unified Modelling Language (UML) provides a means of communicating the structure and dynamic behaviour of a software solution. The [class diagram](https://msdn.microsoft.com/en-us/library/dd409437.aspx) and [sequence diagram](https://msdn.microsoft.com/en-us/library/dd409377.aspx) are the two main ways of communicating aspects of object oriented solutions.
 
 ## When and Why
 
