--- a/src/content/docs/book/part-3-programs-as-concepts/7-abstract-interfaces/2-trailside/04-interface-inheritance.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/7-abstract-interfaces/2-trailside/04-interface-inheritance.mdx
@@ -65,7 +65,7 @@ To implement the interface you need to:
 1. Indicate you are implementing the interface in the class header by adding the interface name after the `:`.
 2. Provide an implementation for each of the interface members (interfaces can have methods and properties) within the class.
 
-We can see in the above code that the `StockItem` class does indicate that it implements the `IComparable` interface, and that it has the `CompareTo` method implemented. So the `StockItem` can now be used whereever an IComparable object is required (another example of polymorphism). In this case the `CompareTo` method needs to return a positive number of this object is larger than then other object, a negative number if it is smaller, or 0 if it is equal. We can perform this comparison using the cost of the `StockItem`, and subtracting the other items cost from the current item. If the current item has a larger cost then this will return a positive number, if it is smaller it will return a negative number, and if it is the same it will return 0 as required.
+We can see in the above code that the `StockItem` class does indicate that it implements the `IComparable` interface, and that it has the `CompareTo` method implemented. So the `StockItem` can now be used wherever an IComparable object is required (another example of polymorphism). In this case the `CompareTo` method needs to return a positive number of this object is larger than then other object, a negative number if it is smaller, or 0 if it is equal. We can perform this comparison using the cost of the `StockItem`, and subtracting the other items cost from the current item. If the current item has a larger cost then this will return a positive number, if it is smaller it will return a negative number, and if it is the same it will return 0 as required.
 
 ## Adding Generics to the Interface
 
