--- a/src/content/docs/book/part-3-programs-as-concepts/9-design-principles-patterns/2-trailside/05-recap-uml-diagrams.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/9-design-principles-patterns/2-trailside/05-recap-uml-diagrams.mdx
@@ -7,7 +7,7 @@ Recap the use of UML class diagrams to communicate the static structure of your 
 
 ![UML Class Diagram of the LightSimulator, with a LightStrip made up of LightBulb objects.](./images/LightStripUML.png)
 
-The Class Diagram from the Unified Modeling Language (UML) allows you to communicate the structure of your solutions. Within an UML Class Diagram rectangular boxes are used to represent the classes within the solution. Each classes box is divided into three sections:
+The Class Diagram from the Unified Modelling Language (UML) allows you to communicate the structure of your solutions. Within an UML Class Diagram rectangular boxes are used to represent the classes within the solution. Each classes box is divided into three sections:
 
 - At the top you have the **name** of the class.
 - The next section contains the **fields** or attributes of the class, describing what the object _knows_.
