--- a/src/content/docs/book/part-3-programs-as-concepts/9-design-principles-patterns/2-trailside/06-picturing-dynamics.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/9-design-principles-patterns/2-trailside/06-picturing-dynamics.mdx
@@ -14,7 +14,7 @@ The above sequence diagram shows how objects in a drawing program could collabor
 
 Below each box is a dashed line that is known as the _life line_. This visually represents the life of this object over time, with time increasing as you travel down the page. In this case, all four objects exist for the duration of this interaction.
 
-Upon each of the lifelines it the rectangular boxes indicate periods during which the object is _active_: when it is performing one of its responsibilities. If we follow the lifeline for the `SplashKit` class you can see that it is activated at four different times. The end of the activity box indicates where the object has finished its task, and control returns to the caller. You can place dashed arrows here to indicate values that are being returned, but even without the arrow we know that control returns to the caller. So after `SplashKit` finishes clearning the screen, control will return back to the `Drawing` so it can go to its next step.
+Upon each of the lifelines it the rectangular boxes indicate periods during which the object is _active_: when it is performing one of its responsibilities. If we follow the lifeline for the `SplashKit` class you can see that it is activated at four different times. The end of the activity box indicates where the object has finished its task, and control returns to the caller. You can place dashed arrows here to indicate values that are being returned, but even without the arrow we know that control returns to the caller. So after `SplashKit` finishes clearing the screen, control will return back to the `Drawing` so it can go to its next step.
 
 In general you start reading a Sequence Diagram from the first message (another name for a method call), and follow these down the page in order to understand the interaction. In this case the first message is the `Program` asking the `Drawing` to `Draw`. This activates the `Drawing` object, and it starts its sequence within which it fulfills its responsibility to draw itself to the screen. Notice that the `Drawing` makes use of its collaborators in order for it to fulfill this responsibility. It first asks `SplashKit` to clear the screen to white, then it asks _each_ of its `Shape` objects to `Draw` themselves to the screen. They then, in turn, ask the `SplashKit` class to fill a rectangle on the screen. In this way, each object fulfills their responsibilities, and we can see how this design allows the `Drawing` to draw itself to the screen.
 
