--- a/src/content/docs/style.mdx
+++ b/src/content/docs/style.mdx
@@ -7,7 +7,7 @@ template: splash
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-Code style can be subjective, divisive, and conterversial -- but it is important. Each software project has its own style guide, and while style guides will change between different projects or organisations, what's key is that your code is consistent within a project. This helps others become familiar with a cohesive codebase, and ensures teams are on the same page.
+Code style can be subjective, divisive, and controversial -- but it is important. Each software project has its own style guide, and while style guides will change between different projects or organisations, what's key is that your code is consistent within a project. This helps others become familiar with a cohesive codebase, and ensures teams are on the same page.
 
 This document will highlight, with examples and reasons, our own style guide which we will follow in our code. If you chose not to follow parts of this guide that's okay -- but make sure you are consistent within your own project.
 
@@ -41,7 +41,7 @@ This document will highlight, with examples and reasons, our own style guide whi
 
 <Card>
 <Tabs>
-  <TabItem label="Suggestion">Comments are a great way to explain what your code is doing, or why it is doing it. However, comments can also be a distraction, and can become outdated or redundant. Only comment code when necessary or where the code may be unclear to the reader. Don't overcomment your code in unecessary places, which can clutter the codebase, or become outdated or redundant. Whether or not a comment is necessary is subjective.</TabItem>
+  <TabItem label="Suggestion">Comments are a great way to explain what your code is doing, or why it is doing it. However, comments can also be a distraction, and can become outdated or redundant. Only comment code when necessary or where the code may be unclear to the reader. Don't over comment your code in unnecessary places, which can clutter the codebase, or become outdated or redundant. Whether or not a comment is necessary is subjective.</TabItem>
   <TabItem label="Example">
     ```c
     // This is a comment
@@ -117,7 +117,7 @@ This document will highlight, with examples and reasons, our own style guide whi
 
 <Card>
 <Tabs>
-  <TabItem label="Rule">Between any new pair of brackes (`{`, `}`), write your code 4 further spaces in from the left.</TabItem>
+  <TabItem label="Rule">Between any new pair of brackets (`{`, `}`), write your code 4 further spaces in from the left.</TabItem>
   <TabItem label="Explanation">Indentation is incredibly helpful for improving the readability of your code. It shows, at a glance, where different blocks of code are, and where different scopes begin and end. It is important to be consistent with indentation within a project (e.g., don't mix tabs and spaces, use a consistent indentation for each new block) to further improve readability.</TabItem>
   <TabItem label="Example">
     Do:
@@ -153,7 +153,7 @@ This document will highlight, with examples and reasons, our own style guide whi
 <Card>
 <Tabs>
   <TabItem label="Rule">You should only have one statement per line.</TabItem>
-  <TabItem label="Explanation">Having multiple statements on a single line (seperated by a `;`) is hard to read.</TabItem>
+  <TabItem label="Explanation">Having multiple statements on a single line (separated by a `;`) is hard to read.</TabItem>
   <TabItem label="Example">
     ```c
       int main()
