Fix path data and initialiser after resize in dynamic array

--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/02-2-add.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2a-advanced-tour/02-2-add.mdx
@@ -93,7 +93,7 @@ bool resize(dynamic_array<T> *array, unsigned int new_capacity)
   // Initialize any new values
   for(int i = array->capacity; i < (int)new_capacity; i++)
   {
-    new(&result->data[i]) T();
+    new(&new_data[i]) T();
   }
 
 
