--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/00-2-explore-functions.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/00-2-explore-functions.mdx
@@ -5,7 +5,7 @@ sidebar:
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
-Now that you have started with procedures we can move on to explore functions. These are just like procedures, but return a value and can therefor be used in expressions. As with procedures, let's build some small utilities that may be useful elsewhere, and create a test programs to explore how they work.
+Now that you have started with procedures we can move on to explore functions. These are just like procedures, but return a value and can therefore be used in expressions. As with procedures, let's build some small utilities that may be useful elsewhere, and create a test programs to explore how they work.
 
 :::tip
 This is a great way to learn new things in programming. Building a small test program lets you play around with new ideas, tools, libraries, and approaches.
