Fix filename typo from 'cheese-shop-tests.cpp' to 'cheese-shop-test.cpp'

--- a/src/content/docs/book/part-2-organised-code/10-project/1-tour/03-iteration-1.mdx
+++ b/src/content/docs/book/part-2-organised-code/10-project/1-tour/03-iteration-1.mdx
@@ -15,7 +15,7 @@ Now we can start building this out using a test driven development approach. Thi
    - [catch_amalgamated.cpp](https://raw.githubusercontent.com/catchorg/Catch2/refs/heads/devel/extras/catch_amalgamated.cpp)
 3. Create the following files:
    - **cheese-shop.h**: a header file for our shared functions and data types.
-   - **cheese-shop-tests.cpp**: the code for our tests.
+   - **cheese-shop-test.cpp**: the code for our tests.
    - **cheese-shop.cpp**: the code for the model of our program.
    - **cheese-shop-cli.cpp**: the command line interface (CLI) code.
   
