Fix signature of set in multi-dim array and add note on read integer range

--- a/src/content/docs/book/part-2-organised-code/4-indirect-access/1-tour/00-explore-references.mdx
+++ b/src/content/docs/book/part-2-organised-code/4-indirect-access/1-tour/00-explore-references.mdx
@@ -113,6 +113,8 @@ If you are having trouble doing this yourself, make sure to go back and review [
 
 This is a partial solution - if you can't create your own see if you can extend this to match the full features described for this program.
 
+Make sure you have implemented the [read integer with a range](/book/part-2-organised-code/2-organising-code/1-tour/00-2-explore-functions/#read-integer---with-a-range) function in your shared utilities.
+
 ```cpp
 /** 
  * @brief Reads the role level from the user.
