Update install instructions

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-intro-tour/0-step-1.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-intro-tour/0-step-1.mdx
@@ -11,6 +11,13 @@ import LinkCard from "/src/components/LinkCard.astro";
 
 This script will install the following applications and tools:
 
+Visual Studio Code, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects!
+
+:::tip[VS Code has it all!]
+Once you have your code project set up, Visual Studio Code will be the main program you will use to write, build, run and debug your code.
+:::
+
+
 - Visual Studio Code
   - C/C++ Extensions
   - C# Extensions
