--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install.mdx
@@ -5,37 +5,21 @@ import { CardGrid } from "@astrojs/starlight/components";
 import Card from "/src/components/Card.astro";
 import LinkCard from "/src/components/LinkCard.astro";
 
+There are several tools that you need to have installed on your computer, so you can build and run the programs we will explore in this guide. These include:
 
-[SplashKit](https://splashkit.io) is a beginner's all-purpose software toolkit that will allow you to create fun and exciting programs more easily, especially for Graphical User Interface (GUI) programs.
+- **Visual Studio Code**, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects!
+- [SplashKit](https://splashkit.io) is a beginner's all-purpose software toolkit that will allow you to create fun and exciting programs more easily, especially for Graphical User Interface (GUI) programs.
+- Compilers to convert your source code into programs you can run.
 
-
-This script will install the following applications and tools:
-
-Visual Studio Code, also commonly known as *VS Code* or just *Code*, is a powerful and versatile code editor that enables efficient coding, debugging, and collaboration for your SplashKit projects!
-
-:::tip[VS Code has it all!]
-Once you have your code project set up, Visual Studio Code will be the main program you will use to write, build, run and debug your code.
-:::
-
-
-- Visual Studio Code
-  - C/C++ Extensions
-  - C# Extensions
-- .NET SDK
-- SplashKit
-  - SplashKit Global
-- wget
-- git
-- curl
-- clang
+Different operating systems have different installation steps.
 
 :::tip[Supported Operating Systems]
 Click on one of the supported operating systems below to see more info about the setup guides available:
 
 <CardGrid>
   <LinkCard
-    title="Raspberry Pi"
-    href="#raspberry-pi"
+    title="Linux"
+    href="#linux"
   />
   <LinkCard
     title="macOS"
@@ -46,8 +30,8 @@ Click on one of the supported operating systems below to see more info about the
     href="#windows"
   />
   <LinkCard
-    title="Linux"
-    href="#linux"
+    title="Virtual Machine (fallback)"
+    href="#virtual-machine"
   />
 </CardGrid>
 :::
@@ -56,22 +40,19 @@ Click on one of the supported operating systems below to see more info about the
 
 These guides have been created to help you set up your computer and install the necessary Applications and Tools that you will need to code in C# and C++ with SplashKit.
 
-### <span style="display:none;">Raspberry Pi</span>
+### <span style="display:none;">Linux</span>
 
-<Card title="Raspberry Pi" icon="fa-brands:raspberry-pi">
-  Follow these steps to build a Raspberry Pi computer and set it up to get started coding.
-  
-  For this you will need a *Raspberry Pi 4* or later device, as described in the Hardware section.
+<Card title="Linux" icon="fa-brands:linux">
+  Follow these steps to set up your Linux computer to get started coding.
+
+  For this you will need a *Linux* computer, or Virtual Machine, running the Debian distribution, or a distribution derived from Debian, such as Raspberry Pi OS.
+
+  *Note: If you use a different Linux distribution, the steps will differ slightly.*
 
   <LinkCard
-    title="Raspberry Pi Hardware Setup Guide"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/2-2-pi-computer/"
-    description="Go to 'Build my Raspberry Pi' page"
-  />
-  <LinkCard
-    title="Raspberry Pi Software Setup Guide"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/2-3-setup-pi/"
-    description="Go to 'Set up my Raspberry Pi' page"
+    title="Set up my Linux Box"
+    href="/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install-os/2-0-setup-linux"
+    description="Go to 'Set up my Linux Box' page"
   />
 </Card>
 
@@ -86,7 +67,7 @@ These guides have been created to help you set up your computer and install the 
 
   <LinkCard
     title="macOS Software Setup Guide"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/2-1-setup-macos/"
+    href="/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install-os/2-1-setup-macos"
     description="Go to 'Set up my macOS' page"
   />
 </Card>
@@ -96,35 +77,33 @@ These guides have been created to help you set up your computer and install the 
 <Card title="Windows" icon="fa-brands:windows">
   Follow these steps to set up your Windows computer to get started coding.
 
-  For this you will need a *Windows 64-bit or 32-bit* computer, with an X64 processor, running Windows 11 (preferred) or Windows 10.
+  For this you will need a *Windows 64-bit* computer, with an X64 processor, running Windows 11 (preferred) or Windows 10.
 
-  Note: *If you are using a Windows computer with an ARM64 processor, you will need to follow the **Set up my Windows (with WSL)** setup guide.*
+  Note: *If you are using a Windows computer with an ARM64 processor, you will need to follow the **Set-up my Windows (with WSL)** setup guide.*
 
-  <LinkCard
-    title="Windows Software Setup Guide (using WSL)"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/2-6-setup-win-wsl/"
-    description="Go to 'Set up my Windows (with WSL)' page"
-  />
   <LinkCard
     title="Windows Software Setup Guide (using MSYS2)"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/2-5-setup-win-msys/"
+    href="/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install-os/2-4-setup-win-msys"
     description="Go to 'Set up my Windows (with MSYS2)' page"
+  />
+  <LinkCard
+    title="Windows Software Setup Guide (using WSL)"
+    href="/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install-os/2-5-setup-win-wsl"
+    description="Go to 'Set up my Windows (with WSL)' page"
   />
 </Card>
 
-### <span style="display:none;">Linux</span>
+### <span style="display:none;">Virtual Machine</span>
 
-<Card title="Linux" icon="fa-brands:linux">
-  Follow these steps to set up your Linux computer to get started coding.
+<Card title="Virtual Machine" icon="fa-solid:server">
+  Follow these steps to set up everything within a Virtual Machine to get started coding.
 
-  For this you will need a *Linux* computer, or Virtual Machine, running the Debian distribution, or a distribution derived from Debian, such as Raspberry Pi OS.
-
-  *Note: If you use a different Linux distribution, the steps may differ slightly.*
+  For this you will a Virtual Machine, such as VMWare, Virtual Box, or Parallels.
 
   <LinkCard
-    title="Set up my Linux Box"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/2-0-setup-linux/"
-    description="Go to 'Set up my Linux Box' page"
+    title="Virtual Machine"
+    href="/book/part-0-getting-started/1-building-programs/2-intro-tour/0-install-os/2-6-setup-virtual-machine"
+    description="Go to 'Virtual Machine' install page"
   />
 </Card>
 
@@ -135,11 +114,13 @@ These guides have been created to simplify the process of troubleshooting any is
 <Card title="Troubleshooting" icon="fa:wrench">
 To get help with troubleshooting installation issues (or any other troubleshooting), you can read through the *General Troubleshooting* tips, or you may find the solution to your problem in the *Specific Issues* guides.
 
+[](/book/appendix/0-installation/3-0-troubleshooting-install.mdx)
+
 ### <span style="display:none;">General Troubleshooting</span>
 
   <LinkCard
     title="General Troubleshooting"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/3-0-troubleshooting-install/#general-troubleshooting"
+    href="/book/appendix/0-installation/3-0-troubleshooting-install/#general-troubleshooting"
     description="Go to the 'General Troubleshooting' section of the 'Installation Troubleshooting' page"
   />
 
@@ -147,7 +128,7 @@ To get help with troubleshooting installation issues (or any other troubleshooti
 
   <LinkCard
     title="Specific Issues"
-    href="/book/part-0-getting-started/1-building-programs/3-intro-tour/1-install/3-0-troubleshooting-install/#specific-issues"
+    href="/book/appendix/0-installation/3-0-troubleshooting-install/#specific-issues"
     description="Go to the 'Specific Issues' section of the 'Installation Troubleshooting' page"
   />
 </Card>
