Update array hand execution diagrams

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/02-array-hand-execution.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/02-array-hand-execution.mdx
@@ -11,13 +11,21 @@ As with indirection, hand execution provides a great way to see how the steps in
 
 ## Hand execution of arrays
 
-![Demonstration of hand execution of arrays with primitive data](./images/hand-exec-0.png)
+![Demonstration of hand execution of arrays with primitive data](./images/hand-exec-arrays-updated.png)
 
 When hand executing arrays with primitive data, the main thing to show are the elements within your arrays and to indicate which index is used to access that element. You can then use these as you step through the code. Use the value of the array index, together with the array name, to determine which value to read when using the array.
 
+:::note[Reassigning array elements]
+
+Here is an example that includes reassigning individual elements of the array:
+
+![Demonstration of hand execution of arrays with array element reassignment](./images/hand-exec-reassigning-arrays-elements.png)
+
+:::
+
 ## Arrays with structs
 
-![Demonstration of hand execution of arrays with structs](./images/hand-exec-1.png)
+![Demonstration of hand execution of arrays with structs](./images/hand-exec-arrays-with-structs-updated.png)
 
 The same applies when hand executing arrays with structs. In this case you also use the field name to identify where in memory (i.e. on your paper) the value needs to be written to or read from. For example, `points[0]` refers to the first element in the array, so the first box of the `points` array on your page. Then `points[0].x` refers to the `x` value within that box.
 
